--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import 'components/available-albums';
 @import 'components/player';
 @import 'components/tumbler';
+@import 'components/user-profile-page';
 
 
 .navigation-menu {
