add user's profile draft page

--- a/src/styles/components/user-profile-page.scss
+++ b/src/styles/components/user-profile-page.scss
@@ -1,7 +1,8 @@
-.user-profile-page {
+//user-profile-page {
+user-profile-component {
     display: none;
 
     &[visible] {
         display: block
-        }
     }
+}
