--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import 'components/player';
 @import 'components/tumbler';
 @import 'components/user-profile-page';
+@import 'components/recent-posts';
 
 
 .navigation-menu {
