--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,11 +5,11 @@
 @import 'components/header.scss';
 @import 'components/main-navigation.scss';
 @import 'components/loader';
-@import 'components/album-cover.scss';
-@import 'components/album-detail.scss';
-@import 'components/available-albums';
-@import 'components/player';
-@import 'components/tumbler';
+@import 'components/old/album-cover';
+@import 'components/old/album-detail';
+@import 'components/old/available-albums';
+@import 'components/old/player';
+@import 'components/old/tumbler';
 @import 'components/user-profile-page';
 @import 'components/recent-posts';
 
